# melanchatly

./: README.md
companion_app/: .gitIgnore  main.py  pyproject.toml  requirements.txt
companion_app/frontend/src/components/: chat.js  profile.js
companion_app/routers/: chat.py  ping.py  rag.py
companion_ui/: package-lock.json  package.json
companion_ui/src/: Api.js  App.css  App.js  Login.js
companion_ui/src/components/: chat.js  home.js
test/: package-lock.json
test/src/: App.js
