[tool.poetry]
name = "companion-app"
version = "0.1.0"
description = "Companion Mental Health AI"
authors = ["Karthik TK <karthiktk16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
