[tool.poetry]
name = "companion-app"
version = "0.1.0"
description = "Companion Mental Health AI"
authors = ["Karthik TK <karthiktk16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.115.4" }
uvicorn = { extras = ["standard"], version = "^0.32.0" }
transformers = "^4.46.1"
torch = "^2.5.1"
joblib = "^1.4.2"
peft = "^0.13.2"
huggingface-hub = "^0.26.2"
tensorflow = "^2.18.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
openai = "^1.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
